Fixed padding on mobile.

--- a/css/hyde.css
+++ b/css/hyde.css
@@ -266,12 +266,6 @@ a:hover {
   background-color: #f5f5f5;
 }
 
-  /* Pad container when viewing on mobile. */
-  .container {
-    margin-left: 30px;
-    margin-right: 10px;
-  }
-
 
 /* Responsive
 -------------------------------------------------- */
